--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "grunt-sails-linker": "~0.10.1",
     "grunt-sync": "0.5.2",
     "include-all": "^1.0.0",
+    "machine": "^1.2.0",
+    "machinepack-gravatar": "^1.2.0",
+    "machinepack-passwords": "^2.3.0",
     "rc": "1.0.1",
     "sails": "~0.12.11",
     "sails-disk": "~0.10.9"
